feat: spring circular dependency