@@ -17,7 +17,7 @@
         <module>log</module>
         <module>aviator</module>
         <module>spring-proxy-bean</module>
-        <module>time</module>
+        <module>base</module>
         <module>spring-modulith</module>
         <module>spring-circular-dependency</module>
     </modules>
@@ -97,9 +97,9 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <compilerArgs>
-                        <arg>--add-exports=java.base/jdk.internal.util=ALL-UNNAMED</arg>
-                        <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
-                        <arg>--add-exports=java.xml/jdk.xml.internal=ALL-UNNAMED</arg>
+                        <!--<arg>&#45;&#45;add-exports=java.base/jdk.internal.util=ALL-UNNAMED</arg>
+                        <arg>&#45;&#45;add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+                        <arg>&#45;&#45;add-exports=java.xml/jdk.xml.internal=ALL-UNNAMED</arg>-->
                     </compilerArgs>
                 </configuration>
             </plugin>
